DEP-270 feat: 내 정보 조회 api path 변경 (#62)
